# chat-gpt-box

./: .env  .eslintrc.cjs  .gitignore  CNAME  LICENSE  README-CN.md  README.md  app_updater.json  capacitor.config.json  chat_template.json  components.d.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  main_bak.yml
android/app/: build.gradle
assets/styles/: tailwind-output.css
doc/: doc-cn.md  doc.md
src/: App.vue  main.js  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ChatBoxBlock.vue  ChatInputBlock.vue  Greet.vue  KeySettingDialog.vue  SideBarBlock.vue
src/enum/: KeyMapEnum.ts
src/i18n/: i18n.ts
src/locales/: en.json  zh-CN.json
src/logger/: Logger.ts
src/models/: ChatGptModelList.ts  DallEModelList.ts  GeminiModelList.ts  LanguageList.ts  OllamaModelList.ts  TiktokenModelList.ts
src/plugins/: DialogWidth.js  DialogWidth.ts  MarkdownLinkOpenDirective.ts
src/router/: Router.ts  router.js  router.ts
src/store/: AppStateStore.ts  ChatList.ts  ChatListStore.ts  ChatTabs.ts  ChatTabsStore.ts  Config.ts  ConfigStore.ts  store.js  store.ts
src/types/: SendRequest.ts  State.ts  Store.ts  StoreTypes.ts
src/util/: ModelList.js  OpenAiUtil.js  RequestUtil.js  RequestUtil.ts  ThemeMode.js
src/utils/: AppUtil.ts  ArrayUtil.ts  AvatarUtil.ts  DateUtil.ts  FileUtil.ts  GPTModelList.ts  KeyMapUtil.ts  LinkUtil.ts  (+6 more)
(+155 files in other folders)
