[package]
name = "chat-gpt-box"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^1.5.4", features = [] }

[dependencies]
tauri = { version = "^1.7.2", features = [ "api-all", "devtools"] }
serde = { version = "^1.0.195", features = ["derive"] }
serde_json = "^1.0.111"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
tao = { git = "https://github.com/xiaochen0517/tao.git", branch = "fix/multi-monitor-scaling-v0.16" }
